@@ -38,7 +38,7 @@ class TemplatesModelTemplates extends JModelList
 		$search = $app->getUserStateFromRequest($this->_context.'.filter.search', 'filter_search');
 		$this->setState('filter.search', $search);
 
-		$clientId = $app->getUserStateFromRequest($this->_context.'.filter.client_id', 'filter_client_id', 0, 'int');
+		$clientId = $app->getUserStateFromRequest($this->_context.'.filter.client_id', 'filter_client_id', null);
 		$this->setState('filter.client_id', $clientId);
 
 		// List state information.
@@ -107,7 +107,9 @@ class TemplatesModelTemplates extends JModelList
 
 		// Filter by client.
 		$clientId = $this->getState('filter.client_id');
-		$query->where('a.client_id = '.(int) $clientId);
+		if (is_numeric($clientId)) {
+			$query->where('a.client_id = '.(int) $clientId);
+		}
 
 		// Filter by search in title
 		$search = $this->getState('filter.search');
